# Pr0mt_X-Text

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  app.rc  build.bat
.github/workflows/: build.yml  release.yml
src/: main.cpp
